Fix writeManifest writing to wrong directory.